package edu.uees.tutorias.domain;

import java.time.LocalDate;
import java.time.LocalTime;

public class HorarioTutoria {

    private int id;
    private LocalDate fecha;
    private LocalTime horaInicio;
    private LocalTime horaFin;
    private boolean disponible;

    public HorarioTutoria(
            int id,
            LocalDate fecha,
            LocalTime horaInicio,
            LocalTime horaFin) {

        this.id = id;
        this.fecha = fecha;
        this.horaInicio = horaInicio;
        this.horaFin = horaFin;
        this.disponible = true;
    }

    public void reservar() {
        disponible = false;
    }

    public void liberar() {
        disponible = true;
    }

    public boolean estaDisponible() {
        return disponible;
    }
}